[package]
authors = ["patrick.fernie@gmail.com"]
name = "user_agent"
description = "Provides the concept of a user agent session, storing and retrieving cookies over multiple HTTP requests (a `Session`)."
version = "0.10.0"
edition = "2018"
repository = "https://github.com/pfernie/user_agent"
documentation = "https://docs.rs/user_agent"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
cookie_store = "0.10.0"
url = "2.1.1"
cookie = "0.12.0"
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
log = "0.4.8"

[dev-dependencies]
env_logger = "0.7.1"
pretty_assertions = "0.6.1"
time = "0.1.42"
serde_json = "1.0.48"

[features]
default = ["default-tls", "preserve_order"]

preserve_order = ["cookie_store/preserve_order"]

default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
